--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     privileged: true
     # cap_add:
     #   - "SYS_ADMIN"
-    volumes:
-    - type: bind
-      source: /sys/fs/cgroup
-      target: /sys/fs/cgroup
-      read_only: true
+    # volumes:
+    # - type: bind
+    #   source: /sys/fs/cgroup
+    #   target: /sys/fs/cgroup
+    #   read_only: true
